feat(rma-frontend): Added filters in sales return list and added various tabs in side menu

--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -57,6 +57,18 @@
             </ion-item>
           </ion-menu-toggle>
 
+          <ion-menu-toggle auto-hide="false">
+            <ion-item
+              *ngIf="loggedIn"
+              routerLink="/customer-profile"
+              lines="none"
+              routerLinkActive="active"
+            >
+              <ion-icon slot="start" name="people-outline"></ion-icon>
+              <ion-label>Customer Profile</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+
           <ion-item
             *ngIf="loggedIn"
             (click)="isSalesMenuVisible = !isSalesMenuVisible"
@@ -100,8 +112,49 @@
               </ion-item>
             </ion-list>
           </ion-menu-toggle>
-          <!-- <ion-menu-toggle auto-hide="false">
-          </ion-menu-toggle> -->
+          <ion-item
+            *ngIf="loggedIn"
+            (click)="isRnDMenuVisible = !isRnDMenuVisible"
+            lines="none"
+          >
+            <ion-icon slot="start" name="flask-outline"></ion-icon>
+            <ion-icon
+              name="chevron-down-outline"
+              *ngIf="!isRnDMenuVisible"
+              slot="end"
+            ></ion-icon>
+            <ion-icon
+              name="chevron-up-outline"
+              *ngIf="isRnDMenuVisible"
+              slot="end"
+            ></ion-icon>
+            <ion-label>R&D Products</ion-label>
+          </ion-item>
+          <ion-menu-toggle auto-hide="false">
+            <ion-list
+              *ngIf="isRnDMenuVisible"
+              class="ion-margin-start ion-no-padding"
+            >
+              <ion-item
+                *ngIf="loggedIn"
+                lines="none"
+                [href]="newDNUrl"
+                target="_blank"
+              >
+                <ion-icon slot="start" name="list-outline"></ion-icon>
+                <ion-label>New Delivery Note</ion-label>
+              </ion-item>
+              <ion-item
+                *ngIf="loggedIn"
+                lines="none"
+                [href]="listRnDURL"
+                target="_blank"
+              >
+                <ion-icon slot="start" name="list-outline"></ion-icon>
+                <ion-label>R&D List</ion-label>
+              </ion-item>
+            </ion-list>
+          </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
             <ion-item
               *ngIf="loggedIn && showPurchase"
@@ -122,6 +175,20 @@
             >
               <ion-icon slot="start" name="repeat"></ion-icon>
               <ion-label>Warranty</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item
+              *ngIf="loggedIn"
+              lines="none"
+              [href]="binListURL"
+              target="_blank"
+            >
+              <ion-icon
+                slot="start"
+                name="information-circle-outline"
+              ></ion-icon>
+              <ion-label>Stock Availability</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
