--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
@@ -232,15 +232,6 @@
   </ion-card-header>
   <ion-card-content class="ion-no-padding">
     <mat-table #table [dataSource]="serialDataSource" style="width: 100%;">
-      <ng-container matColumnDef="item_code">
-        <mat-header-cell *matHeaderCellDef>Item Code</mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <ng-container>
-            {{ row.item_code }}
-          </ng-container>
-        </mat-cell>
-      </ng-container>
-
       <ng-container matColumnDef="item_name">
         <mat-header-cell *matHeaderCellDef>Item Name</mat-header-cell>
         <mat-cell *matCellDef="let row">
@@ -313,9 +304,14 @@
 </ion-card>
 
 <ion-card *ngIf="salesInvoiceDetails && !disableDeliveredSerialsCard">
-
-  <div class="loading-shade" *ngIf="deliveredSerialsDataSource.loading$ | async">
-    <mat-progress-bar *ngIf="deliveredSerialsDataSource.loading$ | async" mode="indeterminate"></mat-progress-bar>
+  <div
+    class="loading-shade"
+    *ngIf="deliveredSerialsDataSource.loading$ | async"
+  >
+    <mat-progress-bar
+      *ngIf="deliveredSerialsDataSource.loading$ | async"
+      mode="indeterminate"
+    ></mat-progress-bar>
   </div>
 
   <ion-card-header style="padding-bottom: 0;">
@@ -342,7 +338,7 @@
     <mat-table
       #table
       [dataSource]="deliveredSerialsDataSource"
-      style="width: 100%;max-height: 58vh;overflow: auto;"
+      style="width: 100%; max-height: 58vh; overflow: auto;"
     >
       <ng-container matColumnDef="sr_no">
         <mat-header-cell *matHeaderCellDef> </mat-header-cell>
