feat(rma-frontend):Added new Service invoice page

--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
@@ -9,6 +9,14 @@
             </ion-text>
           </ion-card-title>
         </ion-col>
+        <ion-col class="ion-text-right">
+          <ion-button
+            color="tertiary"
+            [routerLink]="['/warranty/service-invoice', 'new']"
+          >
+            Add
+          </ion-button>
+        </ion-col>
       </ion-row>
     </ion-grid>
   </ion-card-header>
